Added new colors to index.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 :root {
   --white: #ffffff;
   --mako: #3d4043;
+  --regent-gray: #8692a6;
+  --royal-blue: #4f81e5;
+  --nevada: #696f79;
 }
 
 body {
