feat: added border-box for every element in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   --nevada: #696f79;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
